--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,9 @@
 apply plugin: 'java'
+
+repositories {
+	mavenCentral()
+}
+
+dependencies {
+    compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.2.0'
+}
